2012-03-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/dl.c (grub_dl_add): Make global in order for gdb_grub
	to work.

2012-03-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/jfs.c (grub_jfs_label): Use first label if second one
	starts with control character.

2012-03-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gdb/cstub.c (grub_gdb_inbuf): Increase the size to avoid
	overflow.
	(grub_gdb_outbuf): Likewise.

2012-03-19  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/menuentry.c (grub_normal_add_menu_entry): Add
	zero terminator. Fixes a crash.

2012-03-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (allocate_pages): Don't allocate
	beyond 4 GiB.
	(grub_cmd_linux): Use GRUB_LINUX_BZIMAGE_ADDR for non-relocatable
	images independently of preffered adderss field.

2012-03-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/i386/pc/play.c: Improve TRANSLATORS comments.
	* grub-core/commands/regexp.c: Likewise.
	* grub-core/loader/i386/linux.c: Likewise.
	* grub-core/partmap/msdos.c: Likewise.
	* grub-core/script/execute.c: Likewise.
	* grub-core/term/gfxterm.c: Likewise.

2012-03-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Add variable parsing in $"..." and fix several mismatches with bash.

	* Makefile.util.def (grub_script_gettext): New test.
	* grub-core/script/execute.c (parse_string): New function.
	(gettext_append): Likewise.
	(grub_script_arglist_to_argv): Use gettext_append.
	* grub-core/script/yylex.l: Fix slash and newline handling in $"...".
	* tests/grub_script_gettext.in: New file.

2012-03-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix handling of leading spaces in scripts.

	* grub-core/normal/cmdline.c (grub_cmdline_get): Don't strip leading
	spaces.
	* grub-core/normal/main.c (grub_file_getline): Remove all preprocessing
	other than skipping \r. All users updated.
	* tests/grub_script_echo1.in: Add space-related tests.